--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -452,33 +452,28 @@ menuitem "tweak gamma"                                              "showmenu ga
 newmenu "quick setup"
 
 menuitemtextinput "nickname: " "" "name $arg1"
-menuitemtextinput "screen width: " "$scr_w" "scr_w $arg1"
+menuitemtextinput "screen width: " "$scr_w" "scr_w $arg1;echo hi"
 menuitemtextinput "screen height: " "$scr_h" "scr_h $arg1"
 menuitemslider "mouse sensitivity: "2 100 "($sensitivity)" 2 "" "sensitivity $arg1"
-menuitemslider "graphics detail: " 1 4 "(getgfxq; $gfxq)" 1 "low medium good best" "new_gfx_quality $arg1"
-menuitemslider "sound detail: " 1 3 "(getsoundq; $soundq)" 1 "low medium high" "new_sound_quality $arg1"
+menuitemslider "graphics detail: " 1 4 "(getgfxq)" 1 "low medium good best" "new_gfx_quality $arg1"
+menuitemslider "sound detail: " 1 3 "(getsoundq)" 1 "low medium high" "new_sound_quality $arg1"
+menuitem "OK" "showmenu restart" 
 
 alias getgfxq [
-    if (= $minlod 200) [ alias gfxq 4 ] [
-        if (= $minlod 100) [ alias gfxq 3 ] [
-            if (= $minlod 60) [ alias gfxq 2 ] [ alias gfxq 1 ]
+    if (= $minlod 200) [ result 4 ] [
+        if (= $minlod 100) [ result 3 ] [
+            if (= $minlod 60) [ result 2 ] [ result 1 ]
         ]
     ]
 ]
 
 alias getsoundq [
-    if (= $soundchans 64) [ alias soundq 3 ] [
-        if (= $soundbufferlen 1024) [ alias soundq 2 ] [ alias soundq 1 ]
+    if (= $soundchans 64) [ result 3 ] [
+        if (= $soundbufferlen 1024) [ result 2 ] [ result 1 ]
     ]
 ]
 
-menuitem "OK" [
-    name $new_name
-    sensitivity $new_sensitivity
-
-    scr_w $new_scr_w
-    scr_h $new_scr_h    
-
+alias new_gfx_quality [
     if (= $new_gfx_quality 4) [ // highest gfx quality
         minlod 200
         fpsrange 100 1000
@@ -487,7 +482,6 @@ menuitem "OK" [
         waterreflect 1
         dynshadow 40
         lighterror 1
-        fsaa 16
     ] [
         if (= $new_gfx_quality 3) [ // high
             minlod 100
@@ -497,7 +491,6 @@ menuitem "OK" [
             waterreflect 1
             dynshadow 40
             lighterror 4
-            fsaa 4
         ] [
             if (= $new_gfx_quality 2) [ // medium
                 minlod 60
@@ -507,7 +500,6 @@ menuitem "OK" [
                 waterreflect 1
                 dynshadow 40
                 lighterror 4
-                fsaa 0
             ] [                 // low
                 minlod 25
                 fpsrange 20 25
@@ -516,11 +508,12 @@ menuitem "OK" [
                 waterreflect 0
                 dynshadow 0
                 lighterror 10
-                fsaa 0
             ]
         ]
     ]
+]
         
+alias new_sound_quality [
     if (= $new_sound_quality 3) [ // high sound
         soundchans 64
         maxsoundsatonce 40
@@ -545,8 +538,6 @@ menuitem "OK" [
             bulletbouncesound 0
         ]
     ]
-    
-    showmenu restart
 ]
 
 newmenu restart
