vars for gfx tweaking
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1547 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -482,6 +482,11 @@ alias new_gfx_quality [
         waterreflect 1
         dynshadow 40
         lighterror 1
+        scorchttl 10000
+        bulletholettl 10000
+        bloodttl 10000
+        gibttl 5000
+        shotlinettl 75
     ] [
         if (= $new_gfx_quality 3) [ // high
             minlod 100
@@ -491,6 +496,11 @@ alias new_gfx_quality [
             waterreflect 1
             dynshadow 40
             lighterror 4
+            scorchttl 10000
+            bulletholettl 10000
+            bloodttl 10000
+            gibttl 5000
+            shotlinettl 75            
         ] [
             if (= $new_gfx_quality 2) [ // medium
                 minlod 60
@@ -500,6 +510,11 @@ alias new_gfx_quality [
                 waterreflect 1
                 dynshadow 40
                 lighterror 4
+                scorchttl 10000
+                bulletholettl 0
+                bloodttl 10000
+                gibttl 0
+                shotlinettl 75                
             ] [                 // low
                 minlod 25
                 fpsrange 20 25
@@ -508,6 +523,11 @@ alias new_gfx_quality [
                 waterreflect 0
                 dynshadow 0
                 lighterror 10
+                scorchttl 0
+                bulletholettl 0
+                bloodttl 0
+                gibttl 0
+                shotlinettl 0                
             ]
         ]
     ]
