--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -44,19 +44,13 @@ menuitem "show all.." [showmenu "all maps"]
 
 newmenu setup
 
-menuitem "Set Name"              "saycommand /name unarmed"
-menuitem "Select Team"           "showmenu team"
-menuitem "Select Skins"          "showmenu skins"
-menuitem "Select Weapon"         "showmenu weapons"
-menuitem "Select Crosshair"	 "showmenu crosshairs"
-menuitem "Set Mouse Sensitivity" "saycommand /sensitivity 30"
+menuitemtextinput "nickname: " "result $curname" "name $arg1"
+menuitemslider "team: " 0 1 "(curteam)" 1 "CLA RVSF" [team (at [CLA RVSF] $arg1)]
+menuitem "select skin.."          [showmenu (at [CLA RVSF] (curteam))]
+menuitem "select weapon.."        "showmenu weapons"
+menuitem "select crosshair.."	  "showmenu crosshairs"
 
-newmenu skins
-
-menuitem "CLA Skins"              "showmenu cla"
-menuitem "RVSF Skins"             "showmenu rvsf"
-
-newmenu "cla"
+newmenu "CLA"
 
 menumdl playermodels/CLA/01 all 50 4
 menuitem "Comandante"           "skin 0" "chmenumdl cla playermodels/CLA/01 all 50 4"
@@ -65,7 +59,7 @@ menuitem "Bomber"               "skin 2" "chmenumdl cla playermodels/CLA/03 all 
 menuitem "Ripper"               "skin 3" "chmenumdl cla playermodels/CLA/04 all 50 4"
 
 
-newmenu "rvsf"
+newmenu "RVSF"
 
 menumdl playermodels/RVSF/01 all 50 4
 menuitem "Alpha"            "skin 0" "chmenumdl rvsf playermodels/RVSF/01 all 50 4"
@@ -76,14 +70,6 @@ menuitem "Swat"             "skin 4" "chmenumdl rvsf playermodels/RVSF/05 all 50
 menuitem "Police"           "skin 5" "chmenumdl rvsf playermodels/RVSF/06 all 50 4"
 
 
-newmenu team
-
-menumdl playermodels/CLA/01 all 50 4
-menuitem "Cuban Liberations Army"			"team CLA" "chmenumdl team playermodels/CLA/01 all 50 4"
-menuitem "Rabid Viper Special Forces"		"team RVSF" "chmenumdl team playermodels/RVSF/03 all 50 4"
-
-
-
 alias gencrosshairs [
 	loop i (listlen $arg1) [
 		alias label (at $arg1 $i)
@@ -92,7 +78,6 @@ alias gencrosshairs [
 ]
 
 newmenu crosshairs
-
 gencrosshairs "default.png cube.png dot.png dot_wide.png o.png o_dot.png o_x.png star.png wide.png x-dot.png"
 
 
@@ -188,7 +173,7 @@ alias genenemyitems [
 			alias teamsize (div $numplayers 2)
 			alias menutext (concatword $teamsize on $teamsize)
 		]
-		menuitem $menutext (concat "alias tmp_numbots" $numplayers "); showmenu botmaps"
+		menuitem $menutext (concat "alias tmp_numbots" $numplayers "; showmenu botmaps")
 	]
 ]
 
@@ -235,12 +220,12 @@ menuitem "Private" "mastermode 1"
 
 newmenu editing
 
-menuitem "Mapmodels..."				"showmenu mapmodels"
-menuitem "Entities"			        "showmenu entities"
+menuitem "Mapmodels..."				            "showmenu mapmodels"
+menuitem "Entities"			                    "showmenu entities"
 menuitem "Pickups"                              "showmenu pickups"
 menuitem "Arches and slopes.."                  "showmenu arches"
 menuitem "Map operations.."                     "showmenu mapop"
-menuitem "Bots"                     "showmenu botedit"
+menuitem "Bots"                                 "showmenu botedit"
 menuitem "help..."                              "showmenu editkeys"
 
 
@@ -439,22 +424,14 @@ menuitem "keyboard/mouse controls"                                  "showmenu co
 menuitem "video settings"                                           "showmenu video"
 menuitem "sound settings"                                           "showmenu sound"
 menuitem "world settings"                                           "showmenu world"
-menuitem "tweak minlod.. (higher = less popup, possibly lower fps)" "showmenu minlod"
-menuitem "tweak fpsrange.. (higher = possibly more popup)"          "showmenu fpsrange"
-menuitem "tweak water subdivision"                                  "showmenu watersubdiv"
-menuitem "tweak dynamic light/shadows"                              "showmenu dynlight"
-menuitem "tweak water reflection"                                   [showmenu "water reflection"]
-menuitem "tweak dynamic player shadows"                             [showmenu "player shadows"]
-menuitem "tweak gamma"                                              "showmenu gamma"
-
 
 
 newmenu "quick setup"
 
 menuitemtextinput "nickname: " "" "name $arg1"
-menuitemtextinput "screen width: " "$scr_w" "scr_w $arg1;echo hi"
+menuitemtextinput "screen width: " "$scr_w" "scr_w $arg1"
 menuitemtextinput "screen height: " "$scr_h" "scr_h $arg1"
-menuitemslider "mouse sensitivity: "2 100 "($sensitivity)" 2 "" "sensitivity $arg1"
+menuitemslider "mouse sensitivity: " 2 100 "($sensitivity)" 2 "" "sensitivity $arg1"
 menuitemslider "graphics detail: " 1 4 "(getgfxq)" 1 "low medium good best" "new_gfx_quality $arg1"
 menuitemslider "sound detail: " 1 3 "(getsoundq)" 1 "low medium high" "new_sound_quality $arg1"
 menuitem "OK" "showmenu restart" 
@@ -474,7 +451,8 @@ alias getsoundq [
 ]
 
 alias new_gfx_quality [
-    if (= $new_gfx_quality 4) [ // highest gfx quality
+    if (= $arg1 4) [ // highest gfx quality
+        fsaa 16
         minlod 200
         fpsrange 100 1000
         watersubdiv 2
@@ -488,7 +466,8 @@ alias new_gfx_quality [
         gibttl 5000
         shotlinettl 75
     ] [
-        if (= $new_gfx_quality 3) [ // high
+        if (= $arg1 3) [ // high
+            fsaa 0
             minlod 100
             fpsrange 60 60
             watersubdiv 2
@@ -502,7 +481,8 @@ alias new_gfx_quality [
             gibttl 5000
             shotlinettl 75            
         ] [
-            if (= $new_gfx_quality 2) [ // medium
+            if (= $arg1 2) [ // medium
+                fsaa 0
                 minlod 60
                 fpsrange 30 40
                 watersubdiv 4
@@ -516,6 +496,7 @@ alias new_gfx_quality [
                 gibttl 0
                 shotlinettl 75                
             ] [                 // low
+                fsaa 0
                 minlod 25
                 fpsrange 20 25
                 watersubdiv 16
@@ -534,7 +515,7 @@ alias new_gfx_quality [
 ]
         
 alias new_sound_quality [
-    if (= $new_sound_quality 3) [ // high sound
+    if (= $arg1 3) [ // high sound
         soundchans 64
         maxsoundsatonce 40
         soundbufferlen 1024
@@ -542,7 +523,7 @@ alias new_sound_quality [
         bulletairsound 1
         bulletbouncesound 1
     ] [
-        if (= $new_sound_quality 2) [ // medium
+        if (= $arg1 2) [ // medium
             soundchans 32
             maxsoundsatonce 10
             soundbufferlen 1024
@@ -588,29 +569,31 @@ menuitemkeyinput "console output: " toggleconsole
 menuitemkeyinput "screenshot: "     screenshot
 menuitemkeyinput "map overview: "   toggleshowmap
 menuitemkeyinput "drop CTF flag: "  dropflag
+menuitem ""
+menuitemcheckbox "invert mouse: " "$invmouse" "invmouse $arg1"
+menuitemslider "mouse sensitivity: " 2 100 "($sensitivity)" 2 "" "sensitivty $arg1"
 
 
 newmenu video
 
 menuitemtextinput "screen width: " "$scr_w" "scr_w $arg1"
 menuitemtextinput "screen height: " "$scr_h" "scr_h $arg1"
-menuitemslider "antialiasing (FSAA) :" 0 5 "$fsaa" 1 "off 2 4 8 16" [
-    alias valuemap "0 2 4 8 16"
-    fsaa (at $valuemap $arg1)
-]
-menuitemslider "gamma :" 30  300 "$gamma"  5 "" "gamma $arg1"
-menuitemslider "minimal level of detail" 25 250 "$minlod" 5 ["low" "decent" "good" "best"] [
-    alias valuemap "25 60 100 250"
-    minlod (at $valuemap $arg1)
-]
+
+alias fsaa_valuemap "0 2 4 8 16"
+menuitemslider "antialiasing (FSAA): " 0 5 "(at $fsaa_valuemap $fsaa)" 1 "off 2 4 8 16" "fsaa (at $fsaa_valuemap $arg1)"
+menuitemslider "gamma: " 30  300 "$gamma"  5 "" "gamma $arg1"
+
+alias minlod_valuemap "25 60 100 250"
+menuitemslider "minimal level of detail" 25 250 "(at $minlod_valuemap $minlod)" 5 ["low" "decent" "good" "best"] "minlod (at $minlod_valuemap $arg1)"
 menuitemcheckbox "water reflection: " "$waterreflect" "waterreflect $arg1"
-menuitemslider "water subdivision: " 0 4 "$watersubdiv" 1 ["lowest quality" "low quality" "medium quality" "high quality" "highest quality"] [
-    alias valuemap "16 8 4 2 1"
-    watersubdiv (at $valuemap $arg1)
-]
+
+alias watersubdiv_valuemap "16 8 4 2 1"
+menuitemslider "water subdivision: " 0 4 "$watersubdiv" 1 ["lowest quality" "low quality" "medium quality" "high quality" "highest quality"] "watersubdiv (at $watersubdiv_valuemap $arg1)"
+
 menuitemcheckbox "dynamic light: " "$dynlight" [ if (= $arg1 1) [ dynlight 16 ] [ dynlight 0 ] ]
-menuitemcheckbox "dynamic shadows: " "$dynshadow" [ if (= $arg1 1) [ dynshadow 40 ] [ dynshadow 0 ] ]
+menuitemcheckbox "dynamic player shadows: " "$dynshadow" [ if (= $arg1 1) [ dynshadow 40 ] [ dynshadow 0 ] ]
 menuitemslider "light error: " 1 100 "$lighterror" 5 "" "lighterror $arg1"
+menuitem fpsrange "showmenu fpsrange"
 
 newmenu fpsrange
 
@@ -619,16 +602,6 @@ menuitem "slow machine (20-25)"          "fpsrange 20 25"
 menuitem "sensible default (30-40)"      "fpsrange 30 40"
 menuitem "fps whore (60-60)"             "fpsrange 60 60"
 menuitem "I don't understand LOD (100+)" "fpsrange 100 1000"
-
-newmenu dynlight
-
-menuitem "enable dynamic light/shadows"                           "dynlight 16"
-menuitem "disable dynamic light/shadows"                           "dynlight 0"
-
-newmenu "player shadows"
-
-menuitem "enable dynamic player shadows"    "dynshadow 40"
-menuitem "disable dynamic player shadows"    "dynshadow 0"
 
 newmenu about
 
@@ -656,34 +629,24 @@ menuitem "" ""
 menuitem "..for further information see the README"
 
 
-newmenu keys
-
-menuitem "left mouse button      - attack" ""
-menuitem "right mouse button     - use scope" ""
-menuitem "R                        - reload Gun" ""
-menuitem "mousewheel up/down  - cycle weapons" ""
-menuitem ""
-menuitem "B                        - weapon menu" ""
-menuitem "T                        - chat"
-
-
 newmenu credits
 
-menuitem "Arghvark    Project Leader, Code" ""
-menuitem "driAn        Lead Coder" "" 
-menuitem "makkE       Lead Artist" ""
-menuitem "              Maps, Models, Skins, Animation" ""
-menuitem "              Sound, some Textures, 2D-Art" ""
-menuitem "Nieb         Models, Hosting" ""
-menuitem "Mitaman     Maps,Ressources" ""
-menuitem "Verbal       QA, Advisor, Lead Tester" ""
-menuitem "Eihrul        Coder, Enet Library, Cube2 backporting"
+menuitem "Arghvark	Project Leader, Code" ""
+menuitem "driAn		Lead Coder" ""
+menuitem "makkE	Lead Artist" ""
+menuitem "		Maps, Models, Skins, Animation" ""
+menuitem "		Sound, Some Textures, 2D-Art" ""
+menuitem "Nieb		Models, Hosting" ""
+menuitem "Mitaman	Maps, Resources" ""
+menuitem "Verbal	QA, Advisor, Lead Tester" ""
+menuitem "Eihrul		Coder, Enet Library, Cube2 backporting"
 menuitem ""
-menuitem "Thanks to:" ""
+menuitem "Special thanks to:" ""
+menuitem ""
 menuitem "Aardappel (Engine), Rick (Bots), absinth (AC for Mac)" ""
-menuitem "JCDPC (Laptop Model, Company), dtd (Hosting), Boeck" ""
-menuitem "DCP (music), ac_stef (bug fixes), RandomIdiot"
-menuitem "Ted Southard (DigitalFlux), Noctua Graphics, Arcitool,"
+menuitem "JCDPC (Laptop Mapmodel), dtd (Hosting), Boeck" ""
+menuitem "DCP (music), ac_stef (bug fixes), RandumIdiot"
+menuitem "Ted Southard (DigitalFlux), Noctua Graphics, Arcitool"
 menuitem "Craig Fortune, 3dcafe, Rohrschach, lemong.fr,"
 menuitem "Mayang.com, Chris Zastrow, imageafter.com (textures)"
 
