--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -31,7 +31,7 @@ alias genmapitems [
 
 newmenu maps
 
-genmapitems "ac_complex ac_mines ac_depot ac_desert ac_desert2 ac_snow ac_power ac_elevation"
+genmapitems "ac_complex ac_mines ac_depot ac_desert ac_desert2 ac_snow ac_power ac_elevation ac_toxic"
 menuitem "show all.." [showmenu "all maps"]
 
 newmenu "all maps"
@@ -39,7 +39,7 @@ menudirlist "packages/maps" "cgz" "map $arg1"
 
 newmenu maps_ctf 
 
-genmapitems "ac_mines ac_depot ac_power ac_elevation"
+genmapitems "ac_mines ac_depot ac_power ac_elevation ac_toxic"
 menuitem "show all.." [showmenu "all maps"]
 
 newmenu setup
@@ -194,7 +194,7 @@ alias genbotmaps [
 	]
 ]
 
-genbotmaps "ac_complex ac_mines ac_depot ac_desert ac_desert2 ac_snow"
+genbotmaps "ac_complex ac_mines ac_depot ac_desert ac_desert2 ac_snow ac_power ac_elevation ac_toxic"
 
 newmenu "server operator"
 
@@ -423,7 +423,6 @@ menuitem "quick setup.."                                            [showmenu "q
 menuitem "keyboard/mouse controls"                                  "showmenu controls"
 menuitem "video settings"                                           "showmenu video"
 menuitem "sound settings"                                           "showmenu sound"
-menuitem "world settings"                                           "showmenu world"
 
 
 newmenu "quick setup"
@@ -446,7 +445,7 @@ alias getgfxq [
 
 alias getsoundq [
     if (= $soundchans 64) [ result 3 ] [
-        if (= $soundbufferlen 1024) [ result 2 ] [ result 1 ]
+        if (= $footsteps 1) [ result 2 ] [ result 1 ]
     ]
 ]
 
@@ -481,7 +480,7 @@ alias new_gfx_quality [
             gibttl 5000
             shotlinettl 75            
         ] [
-            if (= $arg1 2) [ // medium
+            if (= $arg1 2) [ // medium (DEFAULT)
                 fsaa 0
                 minlod 60
                 fpsrange 30 40
@@ -515,10 +514,9 @@ alias new_gfx_quality [
 ]
         
 alias new_sound_quality [
-    if (= $arg1 3) [ // high sound
+    if (= $arg1 3) [ // high sound (DEFAULT)
         soundchans 64
         maxsoundsatonce 40
-        soundbufferlen 1024
         footsteps 1
         bulletairsound 1
         bulletbouncesound 1
@@ -526,14 +524,12 @@ alias new_sound_quality [
         if (= $arg1 2) [ // medium
             soundchans 32
             maxsoundsatonce 10
-            soundbufferlen 1024
             footsteps 1
             bulletairsound 0
             bulletbouncesound 0
         ] [                         // low
             soundchans 32
             maxsoundsatonce 5
-            soundbufferlen 2048 // causes sound lag while reducing cpu load
             footsteps 0
             bulletairsound 0
             bulletbouncesound 0
@@ -580,20 +576,20 @@ menuitemtextinput "screen width: " "$scr_w" "scr_w $arg1"
 menuitemtextinput "screen height: " "$scr_h" "scr_h $arg1"
 
 alias fsaa_valuemap "0 2 4 8 16"
-menuitemslider "antialiasing (FSAA): " 0 5 "(at $fsaa_valuemap $fsaa)" 1 "off 2 4 8 16" "fsaa (at $fsaa_valuemap $arg1)"
+menuitemslider "antialiasing (FSAA): " 0 4 "(findlist $fsaa_valuemap $fsaa)" 1 "off 2 4 8 16" "fsaa (at $fsaa_valuemap $arg1)"
 menuitemslider "gamma: " 30  300 "$gamma"  5 "" "gamma $arg1"
 
 alias minlod_valuemap "25 60 100 250"
-menuitemslider "minimal level of detail" 25 250 "(at $minlod_valuemap $minlod)" 5 ["low" "decent" "good" "best"] "minlod (at $minlod_valuemap $arg1)"
+menuitemslider "minimal level of detail: " 25 250 "(findlist $minlod_valuemap $minlod)" 5 ["low" "decent" "good" "best"] "minlod (at $minlod_valuemap $arg1)"
 menuitemcheckbox "water reflection: " "$waterreflect" "waterreflect $arg1"
 
 alias watersubdiv_valuemap "16 8 4 2 1"
-menuitemslider "water subdivision: " 0 4 "$watersubdiv" 1 ["lowest quality" "low quality" "medium quality" "high quality" "highest quality"] "watersubdiv (at $watersubdiv_valuemap $arg1)"
+menuitemslider "water subdivision: " 0 4 "(findlist $watersubdiv_valuemap $watersubdiv)" 1 ["lowest quality" "low quality" "medium quality" "high quality" "highest quality"] "watersubdiv (at $watersubdiv_valuemap $arg1)"
 
 menuitemcheckbox "dynamic light: " "$dynlight" [ if (= $arg1 1) [ dynlight 16 ] [ dynlight 0 ] ]
 menuitemcheckbox "dynamic player shadows: " "$dynshadow" [ if (= $arg1 1) [ dynshadow 40 ] [ dynshadow 0 ] ]
 menuitemslider "light error: " 1 100 "$lighterror" 5 "" "lighterror $arg1"
-menuitem fpsrange "showmenu fpsrange"
+menuitem "fpsrange.." "showmenu fpsrange"
 
 newmenu fpsrange
 
@@ -622,9 +618,9 @@ menuitem "http://www.cubeengine.com/" "echo sorry no built-in web browser yet :)
 
 newmenu help
 
-menuitem "AssaultCube reference"	"showmenu reference"
-menuitem "search command"           "saycommand /docfind yourSearchString"
-menuitem "default keys"				"showmenu keys"
+menuitem "AssaultCube reference"	 "showmenu reference"
+menuitem "search commands"           "saycommand /docfind yourSearchString"
+menuitem "default keys"				 "showmenu controls"
 menuitem "" ""
 menuitem "..for further information see the README"
 
