--- a/ac/config/keymap.cfg
+++ b/ac/config/keymap.cfg
@@ -108,8 +108,8 @@ keymap 284 F3 ""
 keymap 285 F4 ""
 keymap 286 F5 "toggleocull"
 keymap 287 F6 "showmip"
-keymap 288 F7 ""
-keymap 289 F8 ""
+keymap 288 F7 "spectate"
+keymap 289 F8 "followplayer 1"
 keymap 290 F9 ""
 keymap 291 F10 ""
 keymap 292 F11 "toggleconsole"
