--- a/ac/config/keymap.cfg
+++ b/ac/config/keymap.cfg
@@ -2,7 +2,7 @@
 
 keymap -1 MOUSE1 "attack"
 keymap -3 MOUSE2 "jump"
-keymap -2 MOUSE3 ""
+keymap -2 MOUSE3 "weapon"
 keymap -4 MOUSE4 ""
 keymap -5 MOUSE5 ""
 keymap 8 BACKSPACE "dropflag"
