--- a/ac/packages/maps/ac_depot.cfg
+++ b/ac/packages/maps/ac_depot.cfg
@@ -1,4 +1,4 @@
-// "The Storage Depot" for ActionCUBE by MitaMAN (June-11-2005)
+// "The Storage Depot" for AssaultCUBE by MitaMAN (June-11-2005)
 
 fog 350
 fogcolour 0
@@ -282,7 +282,7 @@ texture 0 "./makke/stairtrim.jpg"
 texture 0 "./makke/stein.jpg
 //texture 0 "./noctua/textile/canvas01.jpg"
 
-texture 0 "./makke/door.jpg"          
+texture 0 "./ri-fix/makkedoorfix.jpg"          
 
 texture 0 "./boeck/rolltor.jpg"
 texture 0 "./makke/rock.jpg" 
@@ -386,3 +386,10 @@ texture 0 "./makke/klappe3.jpg"
 // texture 0 "./3wood_crate_05.jpg"
 // texture 0 "./3wood_crate_12.jpg"
 // texture 0 "./3wood_crate_13.jpg"
+
+
+
+// makkE's door texture shrunk to the right size by RandumIdiot so boxes using it look better.
+// Please note: The normal one has also been shrunk as it was slightly too big.
+
+texture 0 "./ri-fix/makkedoorfix2.jpg" 
