Fog and skymap fix.
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1593 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/packages/maps/ac_snow.cfg
+++ b/ac/packages/maps/ac_snow.cfg
@@ -73,14 +73,14 @@ mapmodel 0 0 0 0 "poster"          //55 mind z-buffer issues on 16bit!
 mapmodel 0 0 0 0 "aard"            //56
 
 //fog image for this map
-/fog 1024
+fog 1024
 
 
 
 // skybox for this map - check /packages/skymaps/
 
-//loadsky "textures/skymaps/steini/steini2"
-/loadsky "/textures/skymaps/steini/steini2"
+loadsky "/textures/skymaps/steini/steini2"
+
 
 // used textures in this map - check /packages/textures/
 
