--- a/ac/config/keymap.cfg
+++ b/ac/config/keymap.cfg
@@ -113,7 +113,7 @@ keymap 289 F8 "followplayer 1"
 keymap 290 F9 ""
 keymap 291 F10 ""
 keymap 292 F11 "toggleconsole"
-keymap 293 F12 "screenshot"
+keymap 293 F12 "[ screenshot; sleep 3 [ echo "screenshot taken" ] ]"
 keymap 294 F13 ""
 keymap 295 F14 ""
 keymap 296 F15 ""
