Putting tree into correct menu.
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1599 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -309,7 +309,6 @@ menuitem "Grass2_snow"          "newent mapmodel 22"
 menuitem "Plant1"     		"newent mapmodel 23"
 menuitem "Plant1_dry"           "newent mapmodel 24"
 menuitem "Plant1_snow"          "newent mapmodel 25"
-menuitem "Tree"     		"newent mapmodel 26"
 
 newmenu interior
 
@@ -354,7 +353,8 @@ menuitem "Fallen Can"     	"newent mapmodel 50"
 menuitem "Broken Wood"     	"newent mapmodel 51"
 menuitem "Coffee"               "newent mapmodel 53"
 menuitem "Flyer"                "newent mapmodel 54"
-menuitem "Poster"               "newent mapmodel 55"
+menuitem "Tree Flyer"     	"newent mapmodel 26"
+menuitem "Wanted Poster"        "newent mapmodel 55"
 
 newmenu entities
 
