Cleanup of the "bots" menu, etc.
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1600 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -622,7 +622,7 @@ menuitem "AssaultCube reference"	 "showmenu reference"
 menuitem "search commands"           "saycommand /docfind yourSearchString"
 menuitem "default keys"				 "showmenu controls"
 menuitem "" ""
-menuitem "..for further information see the README"
+menuitem "..for further information see the README" "echo 2The readme can be found in the base AssaultCube directory."
 
 
 newmenu credits
@@ -635,36 +635,45 @@ menuitem "		Sound, Some Textures, 2D-Art" ""
 menuitem "Nieb		Models, Hosting" ""
 menuitem "Mitaman	Maps, Resources" ""
 menuitem "Verbal	QA, Advisor, Lead Tester" ""
-menuitem "Eihrul		Coder, Enet Library, Cube2 backporting"
+menuitem "Eihrul		Coder, Enet Library, Cube2 backporting" ""
 menuitem ""
 menuitem "Special thanks to:" ""
 menuitem ""
 menuitem "Aardappel (Engine), Rick (Bots), absinth (AC for Mac)" ""
 menuitem "JCDPC (Laptop Mapmodel), dtd (Hosting), Boeck" ""
-menuitem "DCP (music), ac_stef (bug fixes), RandumIdiot"
-menuitem "Ted Southard (DigitalFlux), Noctua Graphics, Arcitool"
-menuitem "Craig Fortune, 3dcafe, Rohrschach, lemong.fr,"
-menuitem "Mayang.com, Chris Zastrow, imageafter.com (textures)"
+menuitem "DCP (music), ac_stef (bug fixes), RandumIdiot" ""
+menuitem "Ted Southard (DigitalFlux), Noctua Graphics, Arcitool" ""
+menuitem "Craig Fortune, 3dcafe, Rohrschach, lemong.fr," ""
+menuitem "Mayang.com, Chris Zastrow, imageafter.com (textures)" ""
 
 
 newmenu botedit
 
-menuitem "addwp" "addwp 0"
-menuitem "addwp autoconnect" "addwp 1"
-menuitem "delwp"
-menuitem "setjumpwp"
-menuitem "unsetjumpwp"
-menuitem "setwpyaw"
-menuitem "addpath1way1"
-menuitem "addpath1way2"
-menuitem "addpath2way1"
-menuitem "addpath2way2"
-menuitem "delpath1way1" 
-menuitem "delpath1way2" 
-menuitem "delpath2way1"
-menuitem "delpath2way2"
-menuitem "wpvisible 1"
-menuitem "wpflood"
-menuitem "wpclear"
-menuitem "wpsave"
-menuitem "xhairwpsel 1"
+menuitem "Add waypoint"				"addwp 0"
+menuitem "Add auto-connecting waypoint"		"addwp 1"
+menuitem "Delete Waypoint"			"delwp"
+menuitem "Set waypoint as jumpable"		"setjumpwp"
+menuitem "Unset waypoint as jumpable"		"unsetjumpwp"
+menuitem "Set waypoint direction (yaw)"		"setwpyaw"
+menuitem "Start of 1-way path"			"addpath1way1"
+menuitem "End of 1-way path"			"addpath1way2"
+menuitem "Start of 2-way path"			"addpath2way1"
+menuitem "End of 2-way path"			"addpath2way2"
+menuitem "Delete Start of 1-way path"		"delpath1way1" 
+menuitem "Delete End of 1-way path"		"delpath1way2" 
+menuitem "Delete Start of 2-way path"		"delpath2way1"
+menuitem "Delete End of 2-way path"		"delpath2way2"
+menuitem "Make waypoints visible"		"wpvisible 1"
+menuitem "Make waypoints invisible"		"wpvisible 0"
+menuitem "Flood map with waypoints"		"wpflood"
+menuitem "Delete all waypoints"			[ showmenu "Are you sure?" ]
+menuitem "Save bot waypoints"			"wpsave"
+menuitem "Select waypoint by clicking"		"xhairwpsel 1"
+menuitem "Select waypoint by the nearest one"	"xhairwpsel 0"
+
+
+newmenu "Are you sure?"
+
+menuitem "Yes, delete all waypoints"		"wpclear"
+menuitem "No. Leave my waypoints alone!"	"showmenu botedit"
+
