Binding right-click by default to bring up editing menu when in edit mode.
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1601 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/defaults.cfg
+++ b/ac/config/defaults.cfg
@@ -73,7 +73,7 @@ alias zoom [
 ]
 
 //bind MOUSE2 [ zoom 1; onrelease [ zoom 0 ] ]
-bind MOUSE2 altaction
+bind MOUSE2 [ if $editing [ showmenu "editing" ] [ altaction ] ]
 
 // alternative zoom toggle
 //alias ztoggle 0
