Preperation for new lighting menu. General cleanup of some menus.
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1602 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/keymap.cfg
+++ b/ac/config/keymap.cfg
@@ -60,7 +60,7 @@ keymap 104 H "heightfield 0"
 keymap 105 I "heightfield 2"
 keymap 106 J ""
 keymap 107 K "corner"
-keymap 108 L ""
+keymap 108 L "showmenu lighting"
 keymap 109 M ""
 keymap 110 N ""
 keymap 111 O "editheight 2 -1"
