--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -220,13 +220,14 @@ menuitem "Private" "mastermode 1"
 
 newmenu editing
 
-menuitem "Mapmodels..."				            "showmenu mapmodels"
-menuitem "Entities"			                    "showmenu entities"
+menuitem "Lighting..."				"showmenu lighting"
+menuitem "Entities"			        "showmenu entities"
 menuitem "Pickups"                              "showmenu pickups"
+menuitem "Mapmodels..."				"showmenu mapmodels"
 menuitem "Arches and slopes.."                  "showmenu arches"
 menuitem "Map operations.."                     "showmenu mapop"
 menuitem "Bots"                                 "showmenu botedit"
-menuitem "help..."                              "showmenu editkeys"
+menuitem "Help..."                              "showmenu editkeys"
 
 
 newmenu editkeys
@@ -273,7 +274,7 @@ menuitem "other"      "showmenu other"
 
 newmenu misc
 
-menuitem "Nothing (clip)"       "newent mapmodel 0"
+menuitem "Nothing/Clip (4x4x2)"       "newent mapmodel 0"
 menuitem "Bridge(8x8)"        	"newent mapmodel 1"
 
 
@@ -289,7 +290,7 @@ menuitem "Ladder(15)"            "newent mapmodel 6"
 newmenu street
 
 menuitem "Streetlight"    	"newent mapmodel 7"
-menuitem "Bench"        	"newent mapmodel 9"
+menuitem "Park Bench"        	"newent mapmodel 9"
 menuitem "Dumpster"    		"newent mapmodel 10"
 menuitem "Roadblock"     	"newent mapmodel 11"
 menuitem "Roadblock2"           "newent mapmodel 12"
@@ -334,7 +335,7 @@ menuitem "Gastank"   		"newent mapmodel 38"
 menuitem "Grate (horizontal)"   "newent mapmodel 39"
 menuitem "Grate (vertical)"     "newent mapmodel 40"
 menuitem "Wrench"     		"newent mapmodel 41"
-menuitem "Screw"     		"newent mapmodel 42"
+menuitem "Bolt"     		"newent mapmodel 42"
 menuitem "Hook"     		"newent mapmodel 52"
 
 newmenu signs
@@ -358,12 +359,12 @@ menuitem "Wanted Poster"        "newent mapmodel 55"
 
 newmenu entities
 
-menuitem spawn_RVSF              "newent playerstart 1"
-menuitem spawn_CLA               "newent playerstart 0"
-menuitem spawn_ffa               "newent playerstart 100"
-menuitem flag_RVSF               "newent ctf-flag 1"
-menuitem flag_CLA                "newent ctf-flag 0"
-menuitem ladder                  "newent ladder"
+menuitem "RVSF Spawn point"	"newent playerstart 1"
+menuitem "CLA Spawn point"	"newent playerstart 0"
+menuitem "FFA Spawn point"	"newent playerstart 100"
+menuitem "RVSF CTF Flag"	"newent ctf-flag 1"
+menuitem "CLA CTF Flag"		"newent ctf-flag 0"
+menuitem "Ladder entity"	"saycommand /newent ladder "
 
 newmenu pickups
 
