NEW: Lights menu for map editing, to help newbie mappers with lighting.
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1603 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/keymap.cfg
+++ b/ac/config/keymap.cfg
@@ -60,7 +60,7 @@ keymap 104 H "heightfield 0"
 keymap 105 I "heightfield 2"
 keymap 106 J ""
 keymap 107 K "corner"
-keymap 108 L "showmenu lighting"
+keymap 108 L [ showmenu lighting ]
 keymap 109 M ""
 keymap 110 N ""
 keymap 111 O "editheight 2 -1"
@@ -113,7 +113,7 @@ keymap 289 F8 "followplayer 1"
 keymap 290 F9 ""
 keymap 291 F10 ""
 keymap 292 F11 "toggleconsole"
-keymap 293 F12 "[ screenshot; sleep 3 [ echo "screenshot taken" ] ]"
+keymap 293 F12 "[ screenshot; sleep 3 [ echo "screenshot created" ] ]"
 keymap 294 F13 ""
 keymap 295 F14 ""
 keymap 296 F15 ""
