Screenshot bug fix, plus a few other things...
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1604 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/defaults.cfg
+++ b/ac/config/defaults.cfg
@@ -22,7 +22,7 @@ bind B "showmenu weapons"
 alias primary [ weapon (currentprimary) ]
 alias secondary [ weapon 1 ]
 alias melee [ weapon 0 ]
-alias grenades [weapon 6 ]
+alias grenades [ weapon 6 ]
 
 bind 1 primary
 bind 2 secondary
@@ -73,7 +73,7 @@ alias zoom [
 ]
 
 //bind MOUSE2 [ zoom 1; onrelease [ zoom 0 ] ]
-bind MOUSE2 [ if $editing [ showmenu "editing" ] [ altaction ] ]
+bind MOUSE2 [ if $editing [ showmenu editing ] [ altaction ] ]
 
 // alternative zoom toggle
 //alias ztoggle 0
