--- a/ac/config/lights.cfg
+++ b/ac/config/lights.cfg
@@ -14,6 +14,8 @@ menuitem "Green light"	[ showmenu "Green light radius" ]
 menuitem "Teal light"	[ showmenu "Teal light radius" ]
 menuitem "Blue light"	[ showmenu "Blue light radius" ]
 menuitem "Pink light"	[ showmenu "Pink light radius" ]
+menuitem ""
+menuitem "Custom light"	"saycommand /newent light "
 
 
 // Light radiuses
@@ -779,13 +781,3 @@ menuitem "Brightness of 225"		"newent light 16 225 225 1"
 menuitem "Brightness of 255(Max)"	"newent light 16 255 255 1"
 
 // End of yellow lights.
-
-
-
-
-
-
-
-
-
-
